--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -21,9 +21,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_files = glob.glob(\"/Users/au324704/Library/Mobile Documents/com~apple~CloudDocs/CHCAA/FABULANET/Resources/SA/emily_data_for_github/*\")\n",
+    "all_files = glob.glob(\"/data/*\")\n",
     "\n",
-    "#\".data/*\"\n",
     "\n",
     "all_arcs_files = [f for f in all_files if 'arcs' in f]\n",
     "intensities_file = [f for f in all_files if 'arcs' not in f]"
