--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 🤯 EmotionArcs\n",
+    "## ❤️ EmotionArcs\n",
     "\n",
     "This script showcases the data released, which can be used to look into the emotional intensities and emotion arcs of 9,000 novels.\n",
     "\n"
